[package]
name = "leptos_drag_reorder_example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.0-rc1", features = ["csr"] }
leptos_drag_reorder = { path = ".." }
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
